--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sameer singh bhandari | portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="./css/app.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" defer></script>
     <script src="https://unpkg.com/pdfobject@2.2.12/pdfobject.min.js" defer></script>
@@ -32,35 +32,35 @@
                 <div class="contact">
                     <div class="social">
                         <div class="box">
-                            <a href="https://www.instagram.com/xtrim.dev" class="fa fa-instagram" target="blank"></a>
+                            <a href="https://www.instagram.com/xtrim.dev" class="fa-brands fa-instagram" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://github.com/xtrimDev" class="fa fa-github" target="blank"></a>
+                            <a href="https://github.com/xtrimDev" class="fa-brands fa-github" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://www.linkedin.com/in/xtrimDev" class="fa fa-linkedin" target="blank"></a>
+                            <a href="https://www.linkedin.com/in/xtrimDev" class="fa-brands fa-linkedin-in" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://twitter.com/xtrim_dev" class="fa fa-twitter" target="blank"></a>
+                            <a href="https://twitter.com/xtrim_dev" class="fa-brands fa-x-twitter" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://t.me/xtrimDev" class="fa fa-telegram" target="blank"></a>
+                            <a href="https://t.me/xtrimDev" class="fa-brands fa-telegram" target="blank"></a>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="detail">
+                        <!-- <div class="detail">
                             <div class="icon">
-                                <i class="fa fa-mobile"></i>
+                                <i class="fa-solid fa-mobile-screen"></i>
                             </div>
                             <div class="data">
                                 <span class="heading">Mobile</span>
                                 <a href="tel:9759010719">+91 9759010719</a>
                             </div>
                         </div>
-                        <div class="divider"></div>
+                        <div class="divider"></div> -->
                         <div class="detail">
                             <div class="icon">
-                                <i class="fa fa-envelope-o"></i>
+                                <i class="fa-regular fa-envelope"></i>
                             </div>
                             <div class="data">
                                 <span class="heading">Email</span>
@@ -70,7 +70,7 @@
                         <div class="divider"></div>
                         <div class="detail">
                             <div class="icon">
-                                <i class="fa fa-map-marker"></i>
+                                <i class="fa-solid fa-location-dot"></i>
                             </div>
                             <div class="data">
                                 <span class="heading">Location</span>
@@ -313,7 +313,7 @@
                                 <div class="img">
                                     <img src="./images/project/sharechat.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('http://sharechat.000.pe/?referral=true')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('http://sharechat.000.pe/?referral=true')"><i class="fa-regular fa-eye"></i></button>
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/Sharechat')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
@@ -324,9 +324,22 @@
                             </div>
                             <div class="card">
                                 <div class="img">
+                                    <img src="./images/project/Notes.png" alt="project">
+                                    <div class="action">
+                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimnotes.onrender.com/')"><i class="fa-regular fa-eye"></i></button>
+                                        <!-- <button type="button" class="code" title="view code" onclick="goto('')"><i class="fa fa-code"></i></button> -->
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <p class="title">Notes Sharing Platform</p>
+                                    <p class="used">Html, CSS, JavaScript</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="img">
                                     <img src="./images/project/webzCloths.png" alt="project">
                                     <div class="action">
-                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa fa-eye"></i></button> -->
+                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa-regular fa-eye"></i></button> -->
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/webzCloths')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
@@ -339,26 +352,13 @@
                                 <div class="img">
                                     <img src="./images/project/Youtube.jpg" alt="project">
                                     <div class="action">
-                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa fa-eye"></i></button> -->
+                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa-regular fa-eye"></i></button> -->
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/yt.clone.react')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
                                     <p class="title">YouTube Clone</p>
                                     <p class="used">Html, CSS, JavaScript and React js</p>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="img">
-                                    <img src="./images/project/Notes.png" alt="project">
-                                    <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimdev.github.io/Notes-Solution/')"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/Notes-Solution')"><i class="fa fa-code"></i></button>
-                                    </div>
-                                </div>
-                                <div class="detail">
-                                    <p class="title">Notes Sharing Platform</p>
-                                    <p class="used">Html, CSS, JavaScript</p>
                                 </div>
                             </div>
                         </div>
