--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" defer></script>
     <script src="https://unpkg.com/pdfobject@2.2.12/pdfobject.min.js" defer></script>
     <script src="./js/app.js" defer></script>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="section-loader">
@@ -27,7 +28,7 @@
             <div class="profile">
                 <div class="portfolio">
                     <h1 class="author">Sameer singh bhandari</h1>
-                    <p class="about">A Ui/Ux designer and Full stack web Developer</p>
+                    <p class="about">Web Developer & Competitive Programer</p>
                 </div>
                 <div class="contact">
                     <div class="social">
@@ -48,16 +49,6 @@
                         </div>
                     </div>
                     <div class="card">
-                        <!-- <div class="detail">
-                            <div class="icon">
-                                <i class="fa-solid fa-mobile-screen"></i>
-                            </div>
-                            <div class="data">
-                                <span class="heading">Mobile</span>
-                                <a href="tel:9759010719">+91 9759010719</a>
-                            </div>
-                        </div>
-                        <div class="divider"></div> -->
                         <div class="detail">
                             <div class="icon">
                                 <i class="fa-regular fa-envelope"></i>
@@ -140,7 +131,7 @@
             <div class="content" id="about-me">
                 <div class="box">
                     <div class="sticky"><h1 class="heading">About me</h1></div>
-                    <p class="indentation">As a Full Stack Web Developer skilled in MERN, PHP, MySQL, and Python, I create dynamic, scalable web applications with a focus on seamless user experiences. Currently, I’m expanding my expertise into <b>Web3</b> and <b>blockchain</b> technology. My commitment to agile methodologies and continuous learning drives my passion for delivering innovative solutions. Let’s collaborate to bring your digital ideas to life!</p>
+                    <p class="indentation">As a Backend Web Developer skilled in MERN, PHP, MySQL, and Python, I create dynamic web applications with a focus on seamless user experiences. Currently, I’m expanding my expertise into <b>Web3</b> and <b>blockchain</b> technology. My commitment to agile methodologies and continuous learning drives my passion for delivering innovative solutions. Let’s collaborate to bring your digital ideas to life!</p>
                 </div>
                 <div class="box">
                     <div class="sticky"><h1 class="heading">Education</h1></div>
@@ -301,6 +292,16 @@
                                 <progress value="80" max="100"> 80% </progress>
                             </div>
                         </div>
+                        <div class="skill">
+                            <h2 class="title">Command Language</h2>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>Bash</span>
+                                    <span class="progress">50%</span>
+                                </div>
+                                <progress value="50" max="100"> 50% </progress>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -313,13 +314,13 @@
                                 <div class="img">
                                     <img src="./images/project/sharechat.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('http://sharechat.000.pe/?referral=true')"><i class="fa-regular fa-eye"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('http://sharechat.000.pe/')"><i class="fa-regular fa-eye"></i></button>
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/Sharechat')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
                                     <p class="title">Sharechat</p>
-                                    <p class="used">Html, CSS, JavaScript, PHP and mySql</p>
+                                    <p class="used">PHP, MySql, JavaScript</p>
                                 </div>
                             </div>
                             <div class="card">
@@ -327,43 +328,29 @@
                                     <img src="./images/project/Notes.png" alt="project">
                                     <div class="action">
                                         <button type="button" class="code" title="view project" onclick="goto('https://xtrimnotes.onrender.com/')"><i class="fa-regular fa-eye"></i></button>
-                                        <!-- <button type="button" class="code" title="view code" onclick="goto('')"><i class="fa fa-code"></i></button> -->
                                     </div>
                                 </div>
                                 <div class="detail">
-                                    <p class="title">Notes Sharing Platform</p>
-                                    <p class="used">Html, CSS, JavaScript</p>
+                                    <p class="title">XtrimNotes</p>
+                                    <p class="used">Node js, MongoDB, EJS</p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="img">
                                     <img src="./images/project/webzCloths.png" alt="project">
                                     <div class="action">
-                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa-regular fa-eye"></i></button> -->
+                                        <button type="button" class="code" title="view project" onclick="goto('http://webzCloths.000.pe/')"><i class="fa-regular fa-eye"></i></button>
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/webzCloths')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
                                     <p class="title">webzCloths</p>
-                                    <p class="used">Html, CSS, JavaScript, PHP and mySql</p>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="img">
-                                    <img src="./images/project/Youtube.jpg" alt="project">
-                                    <div class="action">
-                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa-regular fa-eye"></i></button> -->
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/yt.clone.react')"><i class="fa fa-code"></i></button>
-                                    </div>
-                                </div>
-                                <div class="detail">
-                                    <p class="title">YouTube Clone</p>
-                                    <p class="used">Html, CSS, JavaScript and React js</p>
+                                    <p class="used">PHP, MySql, JavaScript</p>
                                 </div>
                             </div>
                         </div>
                         <div class="secondary">
-                            <h2 class="more">More Projects</h2>
+                            <h2 class="more">Fun Projects</h2>
                             <div class="list">
                                 <div class="item" onclick="goto('https://xtrimDev.github.io/digital-signature/')">
                                     <div class="icon">
