Link updated xtrimnotes

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                 <div class="img">
                                     <img src="./images/project/Notes.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimnotes.onrender.com/')"><i class="fa-regular fa-eye"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimnotes.in/')"><i class="fa-regular fa-eye"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
@@ -339,7 +339,6 @@
                                 <div class="img">
                                     <img src="./images/project/webzCloths.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('http://webzCloths.000.pe/')"><i class="fa-regular fa-eye"></i></button>
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/webzCloths')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
