--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="profile">
                 <div class="portfolio">
                     <h1 class="author">Sameer singh bhandari</h1>
-                    <p class="about">Web Developer & Competitive Programer</p>
+                    <p class="about">Backend Developer, ML Learner</p>
                 </div>
                 <div class="contact">
                     <div class="social">
@@ -65,7 +65,7 @@
                             </div>
                             <div class="data">
                                 <span class="heading">Location</span>
-                                <a href="https://www.google.com/maps/dir//Tehri%20Garhwal%20uttarakhand" target="blank">Tehri Garhwal, Uttarakhand</a>
+                                <a href="https://www.google.com/maps/dir//dehradun" target="blank">Dehradun, Uttarakhand</a>
                             </div>
                         </div>
                         <div class="divider"></div>
@@ -197,10 +197,10 @@
                             </div>
                             <div class="list">
                                 <div class="lang">
-                                    <span>typescript</span>
-                                    <span class="progress" >80%</span>
+                                    <span>Tailwind</span>
+                                    <span class="progress" >75%</span>
                                 </div>
-                                <progress value="80" max="100"> 80% </progress>
+                                <progress value="75" max="100"> 75% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
@@ -293,13 +293,27 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <h2 class="title">Command Language</h2>
+                            <h2 class="title">Other</h2>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>SciKit Learn</span>
+                                    <span class="progress">70%</span>
+                                </div>
+                                <progress value="70" max="100"> 70% </progress>
+                            </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>Solidity</span>
+                                    <span class="progress">60%</span>
+                                </div>
+                                <progress value="60" max="100"> 60% </progress>
+                            </div>
                             <div class="list">
                                 <div class="lang">
                                     <span>Bash</span>
-                                    <span class="progress">50%</span>
+                                    <span class="progress">65%</span>
                                 </div>
-                                <progress value="50" max="100"> 50% </progress>
+                                <progress value="65" max="100"> 65% </progress>
                             </div>
                         </div>
                     </div>
@@ -310,6 +324,18 @@
                     <div class="sticky"><h1 class="heading">Projects</h1></div>
                     <div class="expose">
                         <div class="primary">
+                            <div class="card">
+                                <div class="img">
+                                    <img src="./images/project/emailClassification.jpg" alt="project">
+                                    <div class="action">
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/Email-Spam-Ham-classification')"><i class="fa fa-code"></i></button>
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <p class="title">Email Classification ML Model</p>
+                                    <p class="used">Python, Scikit-Learn, Flask, React</p>
+                                </div>
+                            </div>
                             <div class="card">
                                 <div class="img">
                                     <img src="./images/project/sharechat.png" alt="project">
@@ -326,6 +352,7 @@
                                 <div class="img">
                                     <img src="./images/project/Notes.png" alt="project">
                                     <div class="action">
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/xtrimNotes')"><i class="fa fa-code"></i></button>
                                         <button type="button" class="code" title="view project" onclick="goto('https://xtrimnotes.in/')"><i class="fa-regular fa-eye"></i></button>
                                     </div>
                                 </div>
