--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile-box">
             <div class="profile-img">
                 <div class="gradient">
-                    <img src="./images/profile/profile-pic.png" alt="Sameer singh bhandari">
+                    <img src="./images/profile/1741261202199.jpeg" alt="Sameer singh bhandari">
                 </div>
             </div>
             <div class="profile">
