added pese content

--- a/index.html
+++ b/index.html
@@ -423,6 +423,16 @@
             <div class="content" id="assigment">
                 <div class="box">
                     <div class="sticky"><h1 class="heading">Assignments</h1></div>
+                    <div class="dropper">
+                        <div class="skill">
+                            <h2 class="title">Week 1</h2>
+                            <div class="indent">
+                                <h2 class="subtitle">Self Introduction</h2>
+                                <iframe src="https://drive.google.com/file/d/1oCPT72ylYPvHycJYb6pRgAiXCZGtmG2k/preview" class="videoBox"  allow="autoplay"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
                     <div class="dropper mb-10">
                         <div class="skill">
                             <h2 class="title">Week 2</h2>
@@ -433,12 +443,32 @@
                         </div>
                     </div>
                     <div class="divider"></div>
-                    <div class="dropper">
+                    <div class="dropper mb-10">
                         <div class="skill">
-                            <h2 class="title">Week 1</h2>
+                            <h2 class="title">Moview Review</h2>
                             <div class="indent">
-                                <h2 class="subtitle">Self Introduction</h2>
-                                <iframe src="https://drive.google.com/file/d/1oCPT72ylYPvHycJYb6pRgAiXCZGtmG2k/preview" class="videoBox" style="max-width: 100%; width: 640px;" allow="autoplay"></iframe>
+                                <h2 class="subtitle">Forest Gump</h2>
+                                <iframe src="https://drive.google.com/file/d/1O7CCKhwUYahXHRkjGV84KWcjj-JKmgmc/preview" class="pdfBox" allow="autoplay"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="dropper mb-10">
+                        <div class="skill">
+                            <h2 class="title">E-mail</h2>
+                            <div class="indent">
+                                <h2 class="subtitle">Hand written cover letter</h2>
+                                <iframe src="https://drive.google.com/file/d/1OKVVd1rNmAMep-sPT3US82h0Xx11wPAd/preview" class="pdfBox" allow="autoplay"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="dropper mb-10">
+                        <div class="skill">
+                            <h2 class="title">Speech</h2>
+                            <div class="indent">
+                                <h2 class="subtitle">Mindset is everything</h2>
+                                <iframe src="https://drive.google.com/file/d/1vcZqk6-7DG2NVaqW3C3UnDQMbmqHlxNz/preview" class="pdfBox" allow="autoplay"></iframe>
                             </div>
                         </div>
                     </div>
