--- a/index.html
+++ b/index.html
@@ -465,6 +465,16 @@
                     <div class="divider"></div>
                     <div class="dropper mb-10">
                         <div class="skill">
+                            <h2 class="title">PESE Learning</h2>
+                            <div class="indent">
+                                <h2 class="subtitle">Top 25 learnings of PESE lectures</h2>
+                                <iframe src="https://drive.google.com/file/d/1br_XRc9t_P40Hwszm-NYWG3cOxCa6zAB/preview" class="pdfBox" allow="autoplay"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="dropper mb-10">
+                        <div class="skill">
                             <h2 class="title">Speech</h2>
                             <div class="indent">
                                 <h2 class="subtitle">Mindset is everything</h2>
