added some ongoing things

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="profile">
                 <div class="portfolio">
                     <h1 class="author">Sameer singh bhandari</h1>
-                    <p class="about">Backend Developer, ML Learner</p>
+                    <p class="about">2nd Year B. Tech Student | MERN Stack & ML Developer | Blockchain & Cybersecurity Enthusiast</p>
                 </div>
                 <div class="contact">
                     <div class="social">
@@ -131,7 +131,7 @@
             <div class="content" id="about-me">
                 <div class="box">
                     <div class="sticky"><h1 class="heading">About me</h1></div>
-                    <p class="indentation">As a Backend Web Developer skilled in MERN, PHP, MySQL, and Python, I create dynamic web applications with a focus on seamless user experiences. Currently, I’m expanding my expertise into <b>Web3</b> and <b>blockchain</b> technology. My commitment to agile methodologies and continuous learning drives my passion for delivering innovative solutions. Let’s collaborate to bring your digital ideas to life!</p>
+                    <p class="indentation">As a Backend Web Developer skilled in MERN, PHP, MySQL, and Python, I create dynamic web applications with a focus on seamless user experiences. Currently, I’m expanding my expertise into <b>Cyber Security</b> and <b>blockchain</b> technology. My commitment to agile methodologies and continuous learning drives my passion for delivering innovative solutions. Let’s collaborate to bring your digital ideas to life!</p>
                 </div>
                 <div class="box">
                     <div class="sticky"><h1 class="heading">Education</h1></div>
@@ -173,44 +173,6 @@
                     <div class="sticky"><h1 class="heading">Skills</h1></div>
                     <div class="dropper">
                         <div class="skill">
-                            <h2 class="title">Frontend</h2>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>html</span>
-                                    <span class="progress">95%</span>
-                                </div>
-                                <progress value="95" max="100"> 95% </progress>
-                            </div>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>css</span>
-                                    <span class="progress">90%</span>
-                                </div>
-                                <progress value="90" max="100"> 90% </progress>
-                            </div>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>javascript</span>
-                                    <span class="progress">75%</span>
-                                </div>
-                                <progress value="75" max="100"> 75% </progress>
-                            </div>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>Tailwind</span>
-                                    <span class="progress" >75%</span>
-                                </div>
-                                <progress value="75" max="100"> 75% </progress>
-                            </div>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>React Js</span>
-                                    <span class="progress" >60%</span>
-                                </div>
-                                <progress value="60" max="100"> 60% </progress>
-                            </div>
-                        </div>
-                        <div class="skill">
                             <h2 class="title">Backend</h2>
                             <div class="list">
                                 <div class="lang">
@@ -222,16 +184,9 @@
                             <div class="list">
                                 <div class="lang">
                                     <span>node js</span>
-                                    <span class="progress">60%</span>
+                                    <span class="progress">80%</span>
                                 </div>
-                                <progress value="60" max="100"> 60% </progress>
-                            </div>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>Express js</span>
-                                    <span class="progress">70%</span>
-                                </div>
-                                <progress value="70" max="100"> 70% </progress>
+                                <progress value="80" max="100"> 80% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
@@ -242,20 +197,37 @@
                             </div>
                         </div>
                         <div class="skill">
+                            <h2 class="title">Frontend</h2>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>Tailwind</span>
+                                    <span class="progress" >85%</span>
+                                </div>
+                                <progress value="85" max="100"> 85% </progress>
+                            </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>React Js</span>
+                                    <span class="progress" >80%</span>
+                                </div>
+                                <progress value="80" max="100"> 80% </progress>
+                            </div>
+                        </div>
+                        <div class="skill">
                             <h2 class="title">Database</h2>
                             <div class="list">
                                 <div class="lang">
                                     <span>MySQL</span>
-                                    <span class="progress">70%</span>
+                                    <span class="progress">85%</span>
                                 </div>
-                                <progress value="70" max="100"> 70% </progress>
+                                <progress value="85" max="100"> 85% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
                                     <span>MongoDB</span>
-                                    <span class="progress">60%</span>
+                                    <span class="progress">75%</span>
                                 </div>
-                                <progress value="60" max="100"> 60% </progress>
+                                <progress value="75" max="100"> 75% </progress>
                             </div>
                         </div>
                         <div class="skill">
@@ -270,16 +242,23 @@
                             <div class="list">
                                 <div class="lang">
                                     <span>Python</span>
-                                    <span class="progress">65%</span>
+                                    <span class="progress">72%</span>
                                 </div>
-                                <progress value="65" max="100"> 65% </progress>
+                                <progress value="72" max="100"> 72% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
                                     <span>C++</span>
-                                    <span class="progress">70%</span>
+                                    <span class="progress">80%</span>
                                 </div>
-                                <progress value="70" max="100"> 70% </progress>
+                                <progress value="80" max="100"> 80% </progress>
+                            </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>JAVA</span>
+                                    <span class="progress">69%</span>
+                                </div>
+                                <progress value="69" max="100"> 69% </progress>
                             </div>
                         </div>
                         <div class="skill">
