fixed some minor bugs

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
                                 </div>
-                                <div class="divider">1</div>
+                                <div class="divider"></div>
                                 <div class="item" onclick="goto('https://github.com/xtrimDev/csv-to-api')">
                                     <div class="icon">
                                         <i class="fa-solid fa-file-excel"></i>
@@ -326,7 +326,7 @@
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
                                 </div>
-                                <div class="divider">1</div>
+                                <div class="divider"></div>
                                 <div class="item" onclick="goto('https://github.com/xtrimDev/Dijkstra-implemetation')">
                                     <div class="icon">
                                         <i class="fa-solid fa-route"></i>
@@ -339,7 +339,7 @@
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
                                 </div>
-                                <div class="divider">1</div>
+                                <div class="divider"></div>
                                 <div class="item" onclick="goto('https://xtrimDev.github.io/paint-app/')">
                                     <div class="icon">
                                         <i class="fa-solid fa-paint-roller"></i>
